added new colour and fixed bg size on contact.html and added bg colour

--- a/styles/partials/_general.scss
+++ b/styles/partials/_general.scss
@@ -34,6 +34,8 @@ body {
 
 .body__bg--lionsgate {
   background-image: url("./../assets/lions-gate-bridge-by-lee-robinson-unsplash.jpg");
+  background-size: 50% 100vh;
+  background-color: $blue-bg;
 }
 
 // Utility class that can be extended
