--- a/styles/styles.css
+++ b/styles/styles.css
@@ -378,6 +378,8 @@ body {
 
 .body__bg--lionsgate {
   background-image: url("./../assets/lions-gate-bridge-by-lee-robinson-unsplash.jpg");
+  background-size: 50% 100vh;
+  background-color: rgba(1, 217, 255, 0.1);
 }
 
 .container {
