--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -2,6 +2,8 @@
 @import "./partials/variable";
 @import "./partials/mixin";
 @import "./partials/general";
+@import "./partials/header";
+@import "./partials/footer";
 @import "./partials/index";
 @import "./partials/about";
 @import "./partials/projects";
