--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -5,8 +5,14 @@ header {
 .header {
   display: flex;
   justify-content: space-between;
-  height: 8vh;
+  height: 10vh;
   font-weight: 700;
+}
+
+.logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .nav {
