--- a/styles/partials/_general.scss
+++ b/styles/partials/_general.scss
@@ -17,8 +17,9 @@ body {
   color: lighten($black, 25%);
   width: 100%;
   text-rendering: optimizeLegibility;
-  height: 100vh;
+  // height: 100vh;
   min-height: 100vh;
+  // height: 1000px;
 }
 
 .body__bg--glass,
@@ -40,6 +41,19 @@ body {
     background-size: 50% 100vh;
     background-color: $blue-bg;
     background-position: right;
+  }
+}
+
+ul {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+  color: lighten($black, 25%);
+
+  &:visited {
+    color: lighten($black, 25%);
   }
 }
 
