--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -18,32 +18,33 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 100;
 }
 
 .nav {
-  position: relative;
-
-  @include tablet-larger-bp {
-    display: flex;
-    height: inherit;
-    justify-content: center;
-    align-items: center;
-  }
+  display: flex;
+  height: inherit;
+  justify-content: center;
+  align-items: center;
 }
 
+//
+// Mobile screen nav menu
+//
 .mobile {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   @include tablet-larger-bp {
     display: none;
   }
 }
 
 .mobile__ham {
-  position: absolute;
-  top: 2.5vh;
-  right: 0;
   z-index: 100;
-  width: 35px;
-  height: 35px;
+  width: 30px;
+  height: 30px;
   background-image: url("./../assets/icons8-menu-50.png");
   background-color: transparent;
   background-size: 100%;
@@ -51,6 +52,50 @@ header {
   cursor: pointer;
 }
 
+.mobile__close {
+  background-image: url("./../assets/icons8-multiply-50.png");
+}
+
+.mobile__navbar {
+  position: absolute;
+  top: 0;
+  left: -5.5%;
+  background: url("./../assets/eberhard-grossgasteiger-unsplash.jpg");
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  transform: translateY(-100%);
+  transition: transform 0.3s ease;
+  display: flex;
+
+  @include tablet {
+    left: -9%;
+  }
+}
+
+.mobile__navbar-link,
+.mobile__navbar-link:visited {
+  color: rgb(255, 191, 0);
+}
+
+.mobile__navbar ul {
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  width: inherit;
+  font-size: 3rem;
+}
+
+.showMobileNavbar {
+  transform: translateY(0);
+}
+
+//
+// Larger screen nav menu
+//
 .full {
   display: none;
 
