--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -70,23 +70,31 @@ header {
   display: flex;
 
   @include tablet {
-    left: -9%;
+    left: -8.8%;
   }
 }
 
 .mobile__navbar-link,
 .mobile__navbar-link:visited {
-  color: rgb(255, 191, 0);
+  color: $yellow-menu;
 }
 
 .mobile__navbar ul {
-  padding: 0;
+  margin: 0;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
   width: inherit;
-  font-size: 3rem;
+  font-size: 2rem;
+
+  @include mobile-larger-bp {
+    font-size: 2.5rem;
+  }
+
+  @include tablet {
+    font-size: 3rem;
+  }
 }
 
 .showMobileNavbar {
