--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -60,7 +60,7 @@ header {
   position: absolute;
   top: 0;
   left: -5.5%;
-  background: url("./../assets/eberhard-grossgasteiger-unsplash.jpg");
+  background: rgb(206, 248, 255);
   background-size: cover;
   width: 100vw;
   height: 100vh;
@@ -68,32 +68,29 @@ header {
   transform: translateY(-100%);
   transition: transform 0.3s ease;
   display: flex;
+  justify-content: center;
+  align-items: center;
 
   @include tablet {
     left: -8.8%;
   }
 }
 
-.mobile__navbar-link,
-.mobile__navbar-link:visited {
-  color: $yellow-menu;
-}
-
 .mobile__navbar ul {
-  margin: 0;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
   width: inherit;
-  font-size: 2rem;
+  height: 50vh;
+  font-size: 1.5rem;
 
   @include mobile-larger-bp {
-    font-size: 2.5rem;
+    font-size: 2rem;
   }
 
   @include tablet {
-    font-size: 3rem;
+    font-size: 2.5rem;
   }
 }
 
