--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -10,8 +10,21 @@ header {
   display: flex;
   justify-content: space-between;
   height: 10vh;
+  font-size: 1rem;
   font-weight: 700;
   z-index: 100;
+
+  @include mobile-larger-bp {
+    font-size: 1.5rem;
+  }
+
+  @include tablet {
+    font-size: 2rem;
+  }
+
+  @include tablet-larger-bp {
+    font-size: 2.5rem;
+  }
 }
 
 .logo {
