--- a/styles/styles.css
+++ b/styles/styles.css
@@ -439,8 +439,27 @@ header {
       -ms-flex-pack: justify;
           justify-content: space-between;
   height: 10vh;
+  font-size: 1rem;
   font-weight: 700;
   z-index: 100;
+}
+
+@media all and (min-width: 375px) {
+  .header {
+    font-size: 1.5rem;
+  }
+}
+
+@media all and (min-width: 750px) {
+  .header {
+    font-size: 2rem;
+  }
+}
+
+@media all and (min-width: 1000px) {
+  .header {
+    font-size: 2.5rem;
+  }
 }
 
 .logo {
