finished responsive header and added it to all html files

--- a/styles/partials/_variable.scss
+++ b/styles/partials/_variable.scss
@@ -15,4 +15,5 @@ $purple: #4a14ac;
 $black: #000000;
 $white: #ffffff;
 $blue-bg: rgba(1, 217, 255, 0.1);
+$mobile-menu-bg: rgb(206, 248, 255);
 $yellow-menu: #d1ab00;
