--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -21,10 +21,6 @@ header {
   @include tablet {
     font-size: 2rem;
   }
-
-  @include tablet-larger-bp {
-    font-size: 2.5rem;
-  }
 }
 
 .logo {
@@ -32,6 +28,14 @@ header {
   justify-content: center;
   align-items: center;
   z-index: 100;
+}
+
+.logo a {
+  &:hover,
+  &:active {
+    color: $pink;
+    transition: color 0.2s;
+  }
 }
 
 .nav {
@@ -73,7 +77,7 @@ header {
   position: absolute;
   top: 0;
   left: -5.5%;
-  background: rgb(206, 248, 255);
+  background: $mobile-menu-bg;
   background-size: cover;
   width: 100vw;
   height: 100vh;
@@ -96,14 +100,15 @@ header {
   align-items: center;
   width: inherit;
   height: 50vh;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
+  font-weight: 400;
 
   @include mobile-larger-bp {
-    font-size: 2rem;
+    font-size: 1.75rem;
   }
 
   @include tablet {
-    font-size: 2.5rem;
+    font-size: 2.25rem;
   }
 }
 
@@ -119,5 +124,24 @@ header {
 
   @include tablet-larger-bp {
     display: flex;
+  }
+}
+
+.full__navbar ul {
+  display: flex;
+  justify-content: space-between;
+  font-size: 1.5rem;
+  font-weight: 400;
+  width: 450px;
+}
+
+.mobile__navbar-link,
+.full__navbar-link {
+  padding-bottom: 5px;
+
+  &:hover,
+  &:active {
+    border-bottom: 5px solid $yellow;
+    transition: border-bottom 0.2s;
   }
 }
