--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -2,6 +2,7 @@
 @import "./partials/variable";
 @import "./partials/mixin";
 @import "./partials/general";
+@import "./partials/animations";
 @import "./partials/header";
 @import "./partials/footer";
 @import "./partials/index";
