fixed bg for projects.html, added mock up img, added flickity carousel

--- a/styles/partials/_general.scss
+++ b/styles/partials/_general.scss
@@ -17,9 +17,8 @@ body {
   color: lighten($black, 25%);
   width: 100%;
   text-rendering: optimizeLegibility;
-  // height: 100vh;
   min-height: 100vh;
-  // height: 1000px;
+  height: auto;
 }
 
 .body__bg--glass,
