--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -30,7 +30,8 @@ header {
   z-index: 100;
 }
 
-.logo a {
+.logo a,
+.mobile__navbar-link {
   &:hover,
   &:active {
     color: $pink;
@@ -132,16 +133,15 @@ header {
   justify-content: space-between;
   font-size: 1.5rem;
   font-weight: 400;
-  width: 450px;
+  width: 460px;
 }
 
-.mobile__navbar-link,
 .full__navbar-link {
-  padding-bottom: 5px;
+  padding: 3px;
 
   &:hover,
   &:active {
-    border-bottom: 5px solid $yellow;
-    transition: border-bottom 0.2s;
+    border-bottom: 4px solid $yellow;
+    transition: border 0.1s;
   }
 }
