--- a/styles/partials/_projects.scss
+++ b/styles/partials/_projects.scss
@@ -13,7 +13,11 @@
   }
 
   @include tablet {
-    width: 600px;
+    width: 450px;
+  }
+
+  @include tablet-larger-bp {
+    width: 745px;
   }
 }
 
@@ -23,9 +27,13 @@
   height: 75vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   text-align: center;
+
+  @include desktop {
+    flex-direction: row;
+  }
 }
 
 .carousel-cell__mobile {
@@ -46,4 +54,12 @@
 
 .projects span {
   line-height: 150%;
+}
+
+.projects p {
+  width: 250px;
+
+  @include mobile-larger-bp {
+    width: 300px;
+  }
 }
