--- a/styles/styles.css
+++ b/styles/styles.css
@@ -988,6 +988,34 @@ header {
   }
 }
 
+@media all and (min-width: 750px) {
+  .projects p {
+    width: 450px;
+  }
+}
+
+.projects h2 {
+  margin-bottom: 10px;
+}
+
+@media all and (min-width: 1000px) {
+  .projects h2 {
+    margin-bottom: 25px;
+  }
+}
+
+@media all and (min-width: 750px) {
+  .projects-info {
+    font-size: 1.5rem;
+  }
+}
+
+@media all and (min-width: 1000px) {
+  .projects-info {
+    font-size: 2rem;
+  }
+}
+
 .projects-info .github {
   width: 50px;
   margin-right: 5px;
