--- a/styles/partials/_general.scss
+++ b/styles/partials/_general.scss
@@ -1,5 +1,6 @@
 html {
   margin: 0 auto;
+  height: 100%;
 }
 
 *,
@@ -17,7 +18,7 @@ body {
   color: lighten($black, 25%);
   width: 100%;
   text-rendering: optimizeLegibility;
-  height: auto;
+  height: 100%;
 }
 
 .body__bg--glass,
