--- a/styles/styles.css
+++ b/styles/styles.css
@@ -343,6 +343,7 @@ template {
 
 html {
   margin: 0 auto;
+  height: 100%;
 }
 
 *,
@@ -361,7 +362,7 @@ body {
   color: #404040;
   width: 100%;
   text-rendering: optimizeLegibility;
-  height: auto;
+  height: 100%;
 }
 
 .body__bg--glass,
@@ -974,7 +975,7 @@ header {
 }
 
 .projects {
-  height: 100vh;
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -987,25 +988,19 @@ header {
 }
 
 .projects img {
-  width: 200px;
+  width: 60%;
   height: auto;
-}
-
-@media all and (min-width: 375px) {
-  .projects img {
-    width: 250px;
-  }
 }
 
 @media all and (min-width: 750px) {
   .projects img {
-    width: 425px;
+    width: 55%;
   }
 }
 
 @media all and (min-width: 1000px) {
   .projects img {
-    width: 700px;
+    width: 50%;
   }
 }
 
@@ -1082,7 +1077,7 @@ header {
 }
 
 .projects h2 {
-  margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 @media all and (min-width: 750px) {
