--- a/styles/partials/_projects.scss
+++ b/styles/partials/_projects.scss
@@ -6,21 +6,21 @@
 }
 
 .projects img {
-  width: 60%;
+  width: 55%;
   height: auto;
 
   @include tablet {
-    width: 55%;
+    width: 50%;
   }
 
-  @include tablet-larger-bp {
-    width: 50%;
+  @include desktop {
+    width: 45%;
   }
 }
 
 .carousel-cell {
   width: 95%;
-  padding: 10px;
+  // padding: 10px;
   height: 75vh;
   display: flex;
   flex-direction: column;
@@ -66,7 +66,7 @@
 }
 
 .projects h2 {
-  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .projects-info {
