--- a/styles/styles.css
+++ b/styles/styles.css
@@ -988,25 +988,24 @@ header {
 }
 
 .projects img {
-  width: 60%;
+  width: 55%;
   height: auto;
 }
 
 @media all and (min-width: 750px) {
   .projects img {
-    width: 55%;
+    width: 50%;
   }
 }
 
-@media all and (min-width: 1000px) {
+@media screen and (min-width: 1440px) {
   .projects img {
-    width: 50%;
+    width: 45%;
   }
 }
 
 .carousel-cell {
   width: 95%;
-  padding: 10px;
   height: 75vh;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1077,7 +1076,7 @@ header {
 }
 
 .projects h2 {
-  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 @media all and (min-width: 750px) {
