--- a/styles/styles.css
+++ b/styles/styles.css
@@ -988,25 +988,33 @@ header {
 }
 
 .projects img {
-  width: 55%;
+  width: 160px;
   height: auto;
+  margin-bottom: 15px;
 }
 
 @media all and (min-width: 750px) {
   .projects img {
-    width: 50%;
+    width: 225px;
+  }
+}
+
+@media all and (min-width: 1000px) {
+  .projects img {
+    width: 300px;
   }
 }
 
 @media screen and (min-width: 1440px) {
   .projects img {
-    width: 45%;
+    width: 490px;
+    margin-bottom: 0;
   }
 }
 
 .carousel-cell {
   width: 95%;
-  height: 75vh;
+  height: 70vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1014,8 +1022,9 @@ header {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -1060,7 +1069,8 @@ header {
 }
 
 .projects p {
-  width: 250px;
+  width: 240px;
+  height: auto;
 }
 
 @media all and (min-width: 375px) {
@@ -1071,7 +1081,7 @@ header {
 
 @media all and (min-width: 750px) {
   .projects p {
-    width: 450px;
+    width: 440px;
   }
 }
 
@@ -1081,7 +1091,7 @@ header {
 
 @media all and (min-width: 750px) {
   .projects-info {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
   }
 }
 
