--- a/styles/styles.css
+++ b/styles/styles.css
@@ -975,7 +975,7 @@ header {
 }
 
 .projects {
-  height: 100%;
+  height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
