--- a/styles/partials/_general.scss
+++ b/styles/partials/_general.scss
@@ -1,6 +1,5 @@
 html {
   margin: 0 auto;
-  height: 100%;
 }
 
 *,
@@ -18,7 +17,7 @@ body {
   color: lighten($black, 25%);
   width: 100%;
   text-rendering: optimizeLegibility;
-  height: 100%;
+  height: auto;
 }
 
 .body__bg--glass,
